syntax = "proto3";
package nameservice.nameservice.v1beta1;

option go_package = "github.com/wangfeiping/nameservice/x/nameservice/types";

import "gogoproto/gogo.proto";

message MsgName {
  string id = 1;
  bytes creator = 2 [(gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.AccAddress"];
  string value = 3; 
  string price = 4; 
}

